# dataskop-platform

./: .editorconfig  .gitignore  .prettierignore  .stylelintrc.json  CONTRIBUTORS.txt  Dockerfile  LICENSE  LICENSE.md  README.md  README.rst  backup.sh  docker-compose.local.yml  docker-compose.production.yml  gulpfile.js  local.sh  local.yml  local_manage.sh  manage.py  package-lock.json  package.json  postcss.config.js  production.yml  pyproject.toml  pytest.ini  restore.sh  setup.cfg  staging.yml  stylelint.config.js  tailwind.config.js  webpack.config.js
.devcontainer/: devcontainer.json  docker-compose.yml
.envs/.local/: .django  .postgres
.github/: dependabot.yml
.github/workflows/: build-deploy.yml  ci-tests.yml  ci.yml  codeql-analysis.yml  npm-audit-fix.yml  prod.yml  stage.yml  test.yml
config/: api_router.py  celery_app.py  urls.py  wsgi.py  wsgi_staging.py
config/settings/: base.py  local.py  production.py  staging.py  test.py
dataskop/: conftest.py
dataskop/campaigns/: admin.py  apps.py  forms.py  managers.py  models.py  notifications.py  signals.py  (+3 more)
docs/: analytics.md  backups.md  celery.md  conf.py  data_donation_editor_guide.md  deployment_docker_compose.md  deployment_dokku.md  emails.md  emails_mailjet.md  fuzzing.md  make.bat  new_case_types.md  personal_data.md  reminders.md  search_hub.md  security.md  settings.md
dokku/: app.json  nginx.conf.sigil
goliath/: conftest.py
requirements/: base.txt  local.txt  production.txt
scripts/: backup.sh  check_format.sh  format.sh  post_update.sh  restore.sh  restore_db.sh  restore_media.sh
(+392 files in other folders)
