[tool.poetry]
authors = ["Johannes Filter <hi@jfilter.de>"]
description = "Only used for development (pylance etc.)"
name = "goliath"
version = "0.0.0"

[tool.poetry.dependencies]
django = "3.0.*"
python = "3.8.*"

Pillow = "*"
argon2-cffi = "*"
celery = "*"
django-celery-beat = "*"
flower = "*"
hiredis = "*"
python-slugify = "*"
pytz = "*"
rcssmin = "*"
redis = "*"
whitenoise = "*"

# Django
# ------------------------------------------------------------------------------
django-allauth = "*"
django-compressor = "*"
django-crispy-forms = "*"
django-environ = "*"
django-model-utils = "*"
django-redis = "*"
# Django REST Framework
django-cors-headers = "*"
djangorestframework = "*"

django-anymail = "*"
django-filter = "*"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
